zparse.go

// line 1 "zparse.rl"
package dns

// Parse RRs
// With the thankful help of gdnsd and the Go examples for Ragel.

import (
    "os"
    "io"
    "net"
    "strings"
    "strconv"
)

const _IOBUF = MaxMsgSize

// A Parser represents a DNS parser for a 
// particular input stream. 
type Parser struct {
    // nothing here yet
    buf    []byte
}

type ParseError struct {
    Error string
    line  int
}

func (e *ParseError) String() string {
    s := e.Error + " line: " + strconv.Itoa(e.line)
    return s
}

// NewParser creates a new DNS file parser from r.
func NewParser(r io.Reader) *Parser {
        buf := make([]byte, _IOBUF) 
        n, err := r.Read(buf)
        if err != nil {
            return nil
        }
        if buf[n-1] != '\n' {
            buf[n] = '\n'
            n++
        }
        buf = buf[:n]
        p := new(Parser)
        p.buf = buf
        return p
}


// Return the rdata fields as a string slice. 
// All starting whitespace is deleted.
// If i is 0 no spaces are deleted from the final rdfs.
func fields(s string, i int) (rdf []string) {
    rdf = strings.Fields(s)
    for i, _ := range rdf {
        rdf[i] = strings.TrimSpace(rdf[i])
    }
    if i > 0 && len(rdf) > i {
        // The last rdf contained embedded spaces, glue it back together.
        for j := i; j < len(rdf); j++ {
            rdf[i-1] += rdf[j]
        }
    }
    return
}

// Wrapper for strconv.Atoi*().
func atoi(s string) uint {
    i, err :=  strconv.Atoui(s)
    if err != nil {
        panic("not a number: " + s + " " + err.String())
    }
    return i
}


// line 81 "zparse.go"
var z_start int = 134
var z_first_final int = 134
var z_error int = 0

var z_en_main int = 134


// line 80 "zparse.rl"


// RR parses a zone file, but only returns the last RR read.
func (zp *Parser) RR() (RR, os.Error) {
    z, err := zp.Zone()
    if err != nil {
        return nil, err
    }
    return z.Pop().(RR), nil
}

// Zone parses an DNS master zone file.
func (zp *Parser) Zone() (z *Zone, err os.Error) {
        z = new(Zone)
        data := string(zp.buf)
        cs, p, pe := 0, 0, len(data)
        eof := len(data)

//        brace := false
        l := 1  // or... 0?
        mark := 0
        var hdr RR_Header

        
// line 114 "zparse.go"
	cs = z_start

// line 117 "zparse.go"
	{
	if p == pe { goto _test_eof }
	switch cs {
	case -666: // i am a hack D:
tr33:
// line 5 "types.rl"
	{
        rdf := fields(data[mark:p], 1)
        rr := new(RR_A)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeA
        rr.A = net.ParseIP(rdf[0])
        z.Push(rr)
        if rr.A == nil {
                return z, &ParseError{Error: "bad A: " + rdf[0], line: l}
        }
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr40:
// line 17 "types.rl"
	{
        rdf := fields(data[mark:p], 1)
        rr := new(RR_AAAA)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeAAAA
        rr.AAAA = net.ParseIP(rdf[0])
        z.Push(rr)
        if rr.AAAA == nil {
                return z, &ParseError{Error: "bad AAAA: " + rdf[0], line: l}
        }
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr50:
// line 195 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr61:
// line 55 "types.rl"
	{
        rdf := fields(data[mark:p], 1)
        rr := new(RR_CNAME)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeCNAME
        rr.Cname = rdf[0]
        z.Push(rr)
        if ! IsDomainName(rdf[0]) {
                return z, &ParseError{Error: "bad CNAME: " + rdf[0], line: l}
        }
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr70:
// line 94 "types.rl"
	{
        rdf := fields(data[mark:p], 4)
        rr := new(RR_DLV)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeDLV
        rr.KeyTag = uint16(atoi(rdf[0]))
        rr.Algorithm = uint8(atoi(rdf[1]))
        rr.DigestType = uint8(atoi(rdf[2]))
        rr.Digest = rdf[3]
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr79:
// line 201 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr87:
// line 118 "types.rl"
	{
        rdf := fields(data[mark:p], 4)
        rr := new(RR_DNSKEY)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeDNSKEY
        rr.Flags = uint16(atoi(rdf[0]))
        rr.Protocol = uint8(atoi(rdf[1]))
        rr.Algorithm = uint8(atoi(rdf[2]))
        rr.PublicKey = rdf[3]
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr92:
// line 82 "types.rl"
	{
        rdf := fields(data[mark:p], 4)
        rr := new(RR_DS)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeDS
        rr.KeyTag = uint16(atoi(rdf[0]))
        rr.Algorithm = uint8(atoi(rdf[1]))
        rr.DigestType = uint8(atoi(rdf[2]))
        rr.Digest = rdf[3]
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr98:
// line 41 "types.rl"
	{
        rdf := fields(data[mark:p], 2)
        rr := new(RR_MX)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeMX
        i, err := strconv.Atoui(rdf[0])
        rr.Pref = uint16(i)
        rr.Mx = rdf[1]
        z.Push(rr)
        if err != nil {
                return z, &ParseError{Error: "bad MX: " + rdf[0], line: l}
        }
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr108:
// line 204 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr114:
// line 29 "types.rl"
	{
        rdf := fields(data[mark:p], 1)
        rr := new(RR_NS)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeNS
        rr.Ns = rdf[0]
        z.Push(rr)
        if ! IsDomainName(rdf[0]) {
                return z, &ParseError{Error: "bad NS: " + rdf[0], line: l}
        }
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr121:
// line 147 "types.rl"
	{
        rdf := fields(data[mark:p], 0)
        rr := new(RR_NSEC)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeNSEC
        rr.NextDomain = rdf[0]
        rr.TypeBitMap = make([]uint16, len(rdf)-1)
        // Fill the Type Bit Map
        for i := 1; i < len(rdf); i++ {
            // Check if its there in the map TODO
            rr.TypeBitMap[i-1] = str_rr[rdf[i]]
        }
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr127:
// line 162 "types.rl"
	{
        rdf := fields(data[mark:p], 0)
        rr := new(RR_NSEC3)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeNSEC3
        rr.Hash = uint8(atoi(rdf[0]))
        rr.Flags = uint8(atoi(rdf[1]))
        rr.Iterations = uint16(atoi(rdf[2]))
        rr.SaltLength = uint8(atoi(rdf[3]))
        rr.Salt = rdf[4]
        rr.HashLength = uint8(atoi(rdf[4]))
        rr.NextDomain = rdf[5]
        rr.TypeBitMap = make([]uint16, len(rdf)-6)
        // Fill the Type Bit Map
        for i := 6; i < len(rdf); i++ {
            // Check if its there in the map TODO
            rr.TypeBitMap[i-6] = str_rr[rdf[i]]
        }
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr136:
// line 183 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr143:
// line 198 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr152:
// line 130 "types.rl"
	{
        rdf := fields(data[mark:p], 9)
        rr := new(RR_RRSIG)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeRRSIG
        rr.TypeCovered = uint16(atoi(rdf[0]))
        rr.Algorithm = uint8(atoi(rdf[1]))
        rr.Labels = uint8(atoi(rdf[2]))
        rr.OrigTtl = uint32(atoi(rdf[3]))
        rr.Expiration = uint32(atoi(rdf[4]))
        rr.Inception = uint32(atoi(rdf[5]))
        rr.KeyTag = uint16(atoi(rdf[6]))
        rr.SignerName = rdf[7]
        rr.Signature = rdf[9]
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr160:
// line 67 "types.rl"
	{
        rdf := fields(data[mark:p], 7)
        rr := new(RR_SOA)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeSOA
        rr.Ns = rdf[0]
        rr.Mbox = rdf[1]
        rr.Serial = uint32(atoi(rdf[2]))
        rr.Refresh = uint32(atoi(rdf[3]))
        rr.Retry = uint32(atoi(rdf[4]))
        rr.Expire = uint32(atoi(rdf[5]))
        rr.Minttl = uint32(atoi(rdf[6]))
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr166:
// line 192 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr173:
// line 106 "types.rl"
	{
        rdf := fields(data[mark:p], 4)
        rr := new(RR_TA)
        rr.Hdr = hdr
        rr.Hdr.Rrtype = TypeTA
        rr.KeyTag = uint16(atoi(rdf[0]))
        rr.Algorithm = uint8(atoi(rdf[1]))
        rr.DigestType = uint8(atoi(rdf[2]))
        rr.Digest = rdf[3]
        z.Push(rr)
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr179:
// line 189 "types.rl"
	{
    }
// line 107 "zparse.rl"
	{ l++ }
	goto st134
tr189:
// line 107 "zparse.rl"
	{ l++ }
	goto st134
st134:
	p++
	if p == pe { goto _test_eof134 }
	fallthrough
case 134:
// line 410 "zparse.go"
	switch data[p] {
		case 9: goto st1
		case 10: goto tr189
		case 32: goto st1
		case 59: goto st133
		case 95: goto tr190
	}
	if data[p] < 48 {
		if 45 <= data[p] && data[p] <= 46 { goto tr190 }
	} else if data[p] > 57 {
		if data[p] > 90 {
			if 97 <= data[p] && data[p] <= 122 { goto tr190 }
		} else if data[p] >= 65 {
			goto tr190
		}
	} else {
		goto tr190
	}
	goto st0
st0:
cs = 0;
	goto _out;
tr186:
// line 108 "zparse.rl"
	{ if ! IsDomainName(data[mark:p]) {
                                            return z, &ParseError{Error: "bad qname: " + data[mark:p], line: l}
                                    }
                                    hdr.Name = data[mark:p]
                                  }
	goto st1
st1:
	p++
	if p == pe { goto _test_eof1 }
	fallthrough
case 1:
// line 446 "zparse.go"
	switch data[p] {
		case 9: goto st1
		case 32: goto st1
		case 65: goto tr3
		case 67: goto tr4
		case 68: goto tr5
		case 72: goto tr6
		case 73: goto tr7
		case 77: goto tr8
		case 78: goto tr9
		case 80: goto tr10
		case 82: goto tr11
		case 83: goto tr12
		case 84: goto tr13
		case 97: goto tr3
		case 99: goto tr4
		case 100: goto tr5
		case 104: goto tr6
		case 105: goto tr7
		case 109: goto tr8
		case 110: goto tr9
		case 112: goto tr10
		case 114: goto tr11
		case 115: goto tr12
		case 116: goto tr13
	}
	if 48 <= data[p] && data[p] <= 57 { goto tr2 }
	goto st0
tr2:
// line 115 "zparse.rl"
	{ /* ... */ }
// line 106 "zparse.rl"
	{ mark = p }
	goto st2
st2:
	p++
	if p == pe { goto _test_eof2 }
	fallthrough
case 2:
// line 486 "zparse.go"
	switch data[p] {
		case 9: goto tr14
		case 32: goto tr14
	}
	if 48 <= data[p] && data[p] <= 57 { goto st2 }
	goto st0
tr14:
// line 116 "zparse.rl"
	{ i, err := strconv.Atoui(data[mark:p])
                                    if err != nil {
                                            return z, &ParseError{Error: "bad ttl: " + data[mark:p], line: l}
                                    }
                                    hdr.Ttl = uint32(i)
                                  }
	goto st3
st3:
	p++
	if p == pe { goto _test_eof3 }
	fallthrough
case 3:
// line 507 "zparse.go"
	switch data[p] {
		case 9: goto st3
		case 32: goto st3
		case 65: goto st4
		case 67: goto tr18
		case 68: goto st31
		case 72: goto tr20
		case 73: goto tr21
		case 77: goto st55
		case 78: goto st60
		case 80: goto st89
		case 82: goto st95
		case 83: goto st103
		case 84: goto st114
		case 97: goto st4
		case 99: goto tr18
		case 100: goto st31
		case 104: goto tr20
		case 105: goto tr21
		case 109: goto st55
		case 110: goto st60
		case 112: goto st89
		case 114: goto st95
		case 115: goto st103
		case 116: goto st114
	}
	goto st0
tr3:
// line 115 "zparse.rl"
	{ /* ... */ }
	goto st4
st4:
	p++
	if p == pe { goto _test_eof4 }
	fallthrough
case 4:
// line 544 "zparse.go"
	switch data[p] {
		case 9: goto st5
		case 32: goto st5
		case 65: goto st8
		case 97: goto st8
	}
	goto st0
st5:
	p++
	if p == pe { goto _test_eof5 }
	fallthrough
case 5:
	switch data[p] {
		case 9: goto tr31
		case 10: goto st0
		case 32: goto tr31
	}
	goto tr30
tr30:
// line 106 "zparse.rl"
	{ mark = p }
	goto st6
st6:
	p++
	if p == pe { goto _test_eof6 }
	fallthrough
case 6:
// line 572 "zparse.go"
	if data[p] == 10 { goto tr33 }
	goto st6
tr31:
// line 106 "zparse.rl"
	{ mark = p }
	goto st7
st7:
	p++
	if p == pe { goto _test_eof7 }
	fallthrough
case 7:
// line 584 "zparse.go"
	switch data[p] {
		case 9: goto tr31
		case 10: goto tr33
		case 32: goto tr31
	}
	goto tr30
st8:
	p++
	if p == pe { goto _test_eof8 }
	fallthrough
case 8:
	switch data[p] {
		case 65: goto st9
		case 97: goto st9
	}
	goto st0
st9:
	p++
	if p == pe { goto _test_eof9 }
	fallthrough
case 9:
	switch data[p] {
		case 65: goto st10
		case 97: goto st10
	}
	goto st0
st10:
	p++
	if p == pe { goto _test_eof10 }
	fallthrough
case 10:
	switch data[p] {
		case 9: goto st11
		case 32: goto st11
	}
	goto st0
st11:
	p++
	if p == pe { goto _test_eof11 }
	fallthrough
case 11:
	switch data[p] {
		case 9: goto tr38
		case 10: goto st0
		case 32: goto tr38
	}
	goto tr37
tr37:
// line 106 "zparse.rl"
	{ mark = p }
	goto st12
st12:
	p++
	if p == pe { goto _test_eof12 }
	fallthrough
case 12:
// line 641 "zparse.go"
	if data[p] == 10 { goto tr40 }
	goto st12
tr38:
// line 106 "zparse.rl"
	{ mark = p }
	goto st13
st13:
	p++
	if p == pe { goto _test_eof13 }
	fallthrough
case 13:
// line 653 "zparse.go"
	switch data[p] {
		case 9: goto tr38
		case 10: goto tr40
		case 32: goto tr38
	}
	goto tr37
tr18:
// line 106 "zparse.rl"
	{ mark = p }
	goto st14
st14:
	p++
	if p == pe { goto _test_eof14 }
	fallthrough
case 14:
// line 669 "zparse.go"
	switch data[p] {
		case 69: goto st15
		case 72: goto st21
		case 78: goto st24
		case 101: goto st15
		case 104: goto st21
		case 110: goto st24
	}
	goto st0
st15:
	p++
	if p == pe { goto _test_eof15 }
	fallthrough
case 15:
	switch data[p] {
		case 82: goto st16
		case 114: goto st16
	}
	goto st0
st16:
	p++
	if p == pe { goto _test_eof16 }
	fallthrough
case 16:
	switch data[p] {
		case 84: goto st17
		case 116: goto st17
	}
	goto st0
st17:
	p++
	if p == pe { goto _test_eof17 }
	fallthrough
case 17:
	switch data[p] {
		case 9: goto st18
		case 32: goto st18
	}
	goto st0
st18:
	p++
	if p == pe { goto _test_eof18 }
	fallthrough
case 18:
	switch data[p] {
		case 9: goto tr48
		case 10: goto st0
		case 32: goto tr48
	}
	goto tr47
tr47:
// line 106 "zparse.rl"
	{ mark = p }
	goto st19
st19:
	p++
	if p == pe { goto _test_eof19 }
	fallthrough
case 19:
// line 729 "zparse.go"
	if data[p] == 10 { goto tr50 }
	goto st19
tr48:
// line 106 "zparse.rl"
	{ mark = p }
	goto st20
st20:
	p++
	if p == pe { goto _test_eof20 }
	fallthrough
case 20:
// line 741 "zparse.go"
	switch data[p] {
		case 9: goto tr48
		case 10: goto tr50
		case 32: goto tr48
	}
	goto tr47
st21:
	p++
	if p == pe { goto _test_eof21 }
	fallthrough
case 21:
	switch data[p] {
		case 9: goto tr51
		case 32: goto tr51
	}
	goto st0
tr184:
// line 116 "zparse.rl"
	{ i, err := strconv.Atoui(data[mark:p])
                                    if err != nil {
                                            return z, &ParseError{Error: "bad ttl: " + data[mark:p], line: l}
                                    }
                                    hdr.Ttl = uint32(i)
                                  }
	goto st22
tr51:
// line 114 "zparse.rl"
	{ hdr.Class = str_class[data[mark:p]] }
	goto st22
st22:
	p++
	if p == pe { goto _test_eof22 }
	fallthrough
case 22:
// line 776 "zparse.go"
	switch data[p] {
		case 9: goto st22
		case 32: goto st22
		case 65: goto st4
		case 67: goto st23
		case 68: goto st31
		case 77: goto st55
		case 78: goto st60
		case 80: goto st89
		case 82: goto st95
		case 83: goto st103
		case 84: goto st114
		case 97: goto st4
		case 99: goto st23
		case 100: goto st31
		case 109: goto st55
		case 110: goto st60
		case 112: goto st89
		case 114: goto st95
		case 115: goto st103
		case 116: goto st114
	}
	goto st0
st23:
	p++
	if p == pe { goto _test_eof23 }
	fallthrough
case 23:
	switch data[p] {
		case 69: goto st15
		case 78: goto st24
		case 101: goto st15
		case 110: goto st24
	}
	goto st0
st24:
	p++
	if p == pe { goto _test_eof24 }
	fallthrough
case 24:
	switch data[p] {
		case 65: goto st25
		case 97: goto st25
	}
	goto st0
st25:
	p++
	if p == pe { goto _test_eof25 }
	fallthrough
case 25:
	switch data[p] {
		case 77: goto st26
		case 109: goto st26
	}
	goto st0
st26:
	p++
	if p == pe { goto _test_eof26 }
	fallthrough
case 26:
	switch data[p] {
		case 69: goto st27
		case 101: goto st27
	}
	goto st0
st27:
	p++
	if p == pe { goto _test_eof27 }
	fallthrough
case 27:
	switch data[p] {
		case 9: goto st28
		case 32: goto st28
	}
	goto st0
st28:
	p++
	if p == pe { goto _test_eof28 }
	fallthrough
case 28:
	switch data[p] {
		case 9: goto tr59
		case 10: goto st0
		case 32: goto tr59
	}
	goto tr58
tr58:
// line 106 "zparse.rl"
	{ mark = p }
	goto st29
st29:
	p++
	if p == pe { goto _test_eof29 }
	fallthrough
case 29:
// line 872 "zparse.go"
	if data[p] == 10 { goto tr61 }
	goto st29
tr59:
// line 106 "zparse.rl"
	{ mark = p }
	goto st30
st30:
	p++
	if p == pe { goto _test_eof30 }
	fallthrough
case 30:
// line 884 "zparse.go"
	switch data[p] {
		case 9: goto tr59
		case 10: goto tr61
		case 32: goto tr59
	}
	goto tr58
tr5:
// line 115 "zparse.rl"
	{ /* ... */ }
	goto st31
st31:
	p++
	if p == pe { goto _test_eof31 }
	fallthrough
case 31:
// line 900 "zparse.go"
	switch data[p] {
		case 76: goto st32
		case 78: goto st37
		case 83: goto st51
		case 108: goto st32
		case 110: goto st37
		case 115: goto st51
	}
	goto st0
st32:
	p++
	if p == pe { goto _test_eof32 }
	fallthrough
case 32:
	switch data[p] {
		case 86: goto st33
		case 118: goto st33
	}
	goto st0
st33:
	p++
	if p == pe { goto _test_eof33 }
	fallthrough
case 33:
	switch data[p] {
		case 9: goto st34
		case 32: goto st34
	}
	goto st0
st34:
	p++
	if p == pe { goto _test_eof34 }
	fallthrough
case 34:
	switch data[p] {
		case 9: goto tr68
		case 10: goto st0
		case 32: goto tr68
	}
	goto tr67
tr67:
// line 106 "zparse.rl"
	{ mark = p }
	goto st35
st35:
	p++
	if p == pe { goto _test_eof35 }
	fallthrough
case 35:
// line 950 "zparse.go"
	if data[p] == 10 { goto tr70 }
	goto st35
tr68:
// line 106 "zparse.rl"
	{ mark = p }
	goto st36
st36:
	p++
	if p == pe { goto _test_eof36 }
	fallthrough
case 36:
// line 962 "zparse.go"
	switch data[p] {
		case 9: goto tr68
		case 10: goto tr70
		case 32: goto tr68
	}
	goto tr67
st37:
	p++
	if p == pe { goto _test_eof37 }
	fallthrough
case 37:
	switch data[p] {
		case 65: goto st38
		case 83: goto st44
		case 97: goto st38
		case 115: goto st44
	}
	goto st0
st38:
	p++
	if p == pe { goto _test_eof38 }
	fallthrough
case 38:
	switch data[p] {
		case 77: goto st39
		case 109: goto st39
	}
	goto st0
st39:
	p++
	if p == pe { goto _test_eof39 }
	fallthrough
case 39:
	switch data[p] {
		case 69: goto st40
		case 101: goto st40
	}
	goto st0
st40:
	p++
	if p == pe { goto _test_eof40 }
	fallthrough
case 40:
	switch data[p] {
		case 9: goto st41
		case 32: goto st41
	}
	goto st0
st41:
	p++
	if p == pe { goto _test_eof41 }
	fallthrough
case 41:
	switch data[p] {
		case 9: goto tr77
		case 10: goto st0
		case 32: goto tr77
	}
	goto tr76
tr76:
// line 106 "zparse.rl"
	{ mark = p }
	goto st42
st42:
	p++
	if p == pe { goto _test_eof42 }
	fallthrough
case 42:
// line 1031 "zparse.go"
	if data[p] == 10 { goto tr79 }
	goto st42
tr77:
// line 106 "zparse.rl"
	{ mark = p }
	goto st43
st43:
	p++
	if p == pe { goto _test_eof43 }
	fallthrough
case 43:
// line 1043 "zparse.go"
	switch data[p] {
		case 9: goto tr77
		case 10: goto tr79
		case 32: goto tr77
	}
	goto tr76
st44:
	p++
	if p == pe { goto _test_eof44 }
	fallthrough
case 44:
	switch data[p] {
		case 75: goto st45
		case 107: goto st45
	}
	goto st0
st45:
	p++
	if p == pe { goto _test_eof45 }
	fallthrough
case 45:
	switch data[p] {
		case 69: goto st46
		case 101: goto st46
	}
	goto st0
st46:
	p++
	if p == pe { goto _test_eof46 }
	fallthrough
case 46:
	switch data[p] {
		case 89: goto st47
		case 121: goto st47
	}
	goto st0
st47:
	p++
	if p == pe { goto _test_eof47 }
	fallthrough
case 47:
	switch data[p] {
		case 9: goto st48
		case 32: goto st48
	}
	goto st0
st48:
	p++
	if p == pe { goto _test_eof48 }
	fallthrough
case 48:
	switch data[p] {
		case 9: goto tr85
		case 10: goto st0
		case 32: goto tr85
	}
	goto tr84
tr84:
// line 106 "zparse.rl"
	{ mark = p }
	goto st49
st49:
	p++
	if p == pe { goto _test_eof49 }
	fallthrough
case 49:
// line 1110 "zparse.go"
	if data[p] == 10 { goto tr87 }
	goto st49
tr85:
// line 106 "zparse.rl"
	{ mark = p }
	goto st50
st50:
	p++
	if p == pe { goto _test_eof50 }
	fallthrough
case 50:
// line 1122 "zparse.go"
	switch data[p] {
		case 9: goto tr85
		case 10: goto tr87
		case 32: goto tr85
	}
	goto tr84
st51:
	p++
	if p == pe { goto _test_eof51 }
	fallthrough
case 51:
	switch data[p] {
		case 9: goto st52
		case 32: goto st52
	}
	goto st0
st52:
	p++
	if p == pe { goto _test_eof52 }
	fallthrough
case 52:
	switch data[p] {
		case 9: goto tr90
		case 10: goto st0
		case 32: goto tr90
	}
	goto tr89
tr89:
// line 106 "zparse.rl"
	{ mark = p }
	goto st53
st53:
	p++
	if p == pe { goto _test_eof53 }
	fallthrough
case 53:
// line 1159 "zparse.go"
	if data[p] == 10 { goto tr92 }
	goto st53
tr90:
// line 106 "zparse.rl"
	{ mark = p }
	goto st54
st54:
	p++
	if p == pe { goto _test_eof54 }
	fallthrough
case 54:
// line 1171 "zparse.go"
	switch data[p] {
		case 9: goto tr90
		case 10: goto tr92
		case 32: goto tr90
	}
	goto tr89
tr8:
// line 115 "zparse.rl"
	{ /* ... */ }
	goto st55
st55:
	p++
	if p == pe { goto _test_eof55 }
	fallthrough
case 55:
// line 1187 "zparse.go"
	switch data[p] {
		case 88: goto st56
		case 120: goto st56
	}
	goto st0
st56:
	p++
	if p == pe { goto _test_eof56 }
	fallthrough
case 56:
	switch data[p] {
		case 9: goto st57
		case 32: goto st57
	}
	goto st0
st57:
	p++
	if p == pe { goto _test_eof57 }
	fallthrough
case 57:
	switch data[p] {
		case 9: goto tr96
		case 10: goto st0
		case 32: goto tr96
	}
	goto tr95
tr95:
// line 106 "zparse.rl"
	{ mark = p }
	goto st58
st58:
	p++
	if p == pe { goto _test_eof58 }
	fallthrough
case 58:
// line 1223 "zparse.go"
	if data[p] == 10 { goto tr98 }
	goto st58
tr96:
// line 106 "zparse.rl"
	{ mark = p }
	goto st59
st59:
	p++
	if p == pe { goto _test_eof59 }
	fallthrough
case 59:
// line 1235 "zparse.go"
	switch data[p] {
		case 9: goto tr96
		case 10: goto tr98
		case 32: goto tr96
	}
	goto tr95
tr9:
// line 115 "zparse.rl"
	{ /* ... */ }
	goto st60
st60:
	p++
	if p == pe { goto _test_eof60 }
	fallthrough
case 60:
// line 1251 "zparse.go"
	switch data[p] {
		case 65: goto st61
		case 83: goto st68
		case 97: goto st61
		case 115: goto st68
	}
	goto st0
st61:
	p++
	if p == pe { goto _test_eof61 }
	fallthrough
case 61:
	switch data[p] {
		case 80: goto st62
		case 112: goto st62
	}
	goto st0
st62:
	p++
	if p == pe { goto _test_eof62 }
	fallthrough
case 62:
	switch data[p] {
		case 84: goto st63
		case 116: goto st63
	}
	goto st0
st63:
	p++
	if p == pe { goto _test_eof63 }
	fallthrough
case 63:
	switch data[p] {
		case 82: goto st64
		case 114: goto st64
	}
	goto st0
st64:
	p++
	if p == pe { goto _test_eof64 }
	fallthrough
case 64:
	switch data[p] {
		case 9: goto st65
		case 32: goto st65
	}
	goto st0
st65:
	p++
	if p == pe { goto _test_eof65 }
	fallthrough
case 65:
	switch data[p] {
		case 9: goto tr106
		case 10: goto st0
		case 32: goto tr106
	}
	goto tr105
tr105:
// line 106 "zparse.rl"
	{ mark = p }
	goto st66
st66:
	p++
	if p == pe { goto _test_eof66 }
	fallthrough
case 66:
// line 1319 "zparse.go"
	if data[p] == 10 { goto tr108 }
	goto st66
tr106:
// line 106 "zparse.rl"
	{ mark = p }
	goto st67
st67:
	p++
	if p == pe { goto _test_eof67 }
	fallthrough
case 67:
// line 1331 "zparse.go"
